# android-camera-filter

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/project/timweri/androidcamerafilter/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/project/timweri/androidcamerafilter/: CameraTest.java  FilterSelection.java
app/src/main/res/layout/: activity_camera_test.xml  activity_filter_selection.xml
app/src/test/java/project/timweri/androidcamerafilter/: ExampleUnitTest.java
filter/: CMakeLists.txt  build.gradle
filter/src/androidTest/java/project/timweri/filter/: ExampleInstrumentedTest.java
filter/src/main/: AndroidManifest.xml
filter/src/main/cpp/basicfilter/: blend.cpp  color.cpp
filter/src/main/java/project/timweri/filter/: Filter.java
filter/src/main/java/project/timweri/filter/basicfilter/: BasicFilter.java
filter/src/test/java/project/timweri/filter/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
openCV/: CMakeLists.txt  build.gradle
openCV/src/main/: AndroidManifest.xml
openCV/src/main/cpp/basicfilter/: blend.cpp
openCV/src/main/java/project/timweri/: Filter.java
openCV/src/main/java/project/timweri/basicfilter/: BasicFilter.java
